# dotfiles

./: .gitignore  Makefile  README  README.textile  configure.ac
etc/: Makefile
etc/rc/: Makefile  conf.local
etc/smtpd/: Makefile  mailer.conf  smtpd.conf
skeleton/: Makefile
skeleton/X11/: Makefile  Xdefaults
skeleton/builds/: Makefile  kernel  userland  xenocara
skeleton/dmesg/: Makefile  machine  script
skeleton/git/: Makefile  gitconfig
skeleton/hg/: Makefile  hgrc
skeleton/mutt/: Makefile  muttrc
skeleton/sh/: Makefile  profile
skeleton/ssh/: Makefile  authorized_keys2  id_dsa.pub
skeleton/tmux/: Makefile  tmux.conf
skeleton/vim/: Makefile  vimrc
skeleton/zsh/: Makefile  zlogin  zlogout  zprofile  zshenv  zshrc
